@@ -1,3 +1,10 @@
+2010-10-14  Miguel de Dios  <miguel.dedios@artica.es>
+
+	* extensions/system_info.php: add TODO.
+	
+	* godmode/agentes/module_manager_editor.php: fixed the ajax with the new
+	safe_ouput function.
+
 2010-10-14  Junichi Satoh  <junichi@rworks.jp>
 
 	* godmode/massive/massive_enable_disable_alerts.php,
